<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile_id">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        android:background="#e5e5e5"
        tools:context="com.example.android.phemmelliot.phemmelliot.med_manager.profile.ProfileActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/newpill"
                android:scaleType="centerCrop"
                android:contentDescription="@string/header_bg" />
            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginLeft="100dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/circle"/>
                <TextView
                    android:id="@+id/name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:gravity="center"
                    android:textColor="#e5e5e5"
                    android:fontFamily="@font/pacifico"
                    android:layout_gravity="center"
                    android:text="MT"/>
            </FrameLayout>
            <TextView
                android:id="@+id/handle_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="100dp"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/montserrat_regular"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:layout_marginRight="10dp"
                android:text="\@medtracker"/>

        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <EditText
                android:id="@+id/first_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:textSize="18sp"
                android:imeOptions="actionNext"
                android:hint="@string/first_name"/>
            <EditText
                android:id="@+id/last_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:textSize="18sp"
                android:layout_marginRight="32dp"
                android:imeOptions="actionNext"
                android:hint="@string/last_name"/>
            <EditText
                android:id="@+id/user_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:textSize="18sp"
                android:imeOptions="actionDone"
                android:hint="@string/username"
                android:maxLength="12"
                />
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_set_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="top|center"
                android:background="@drawable/btn_bg"
                android:elevation="10dp"
                android:text="@string/setup_profile"
                android:textSize="18sp"
                android:textColor="#000"
                android:drawableRight="@drawable/ic_send_black_24dp"
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginBottom="40dp"
                />
        </FrameLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
